@@ -1,5 +1,6 @@
 procps-3.1.11 --> procps-3.1.12
 
+required flags moved out of CFLAGS               #205429
 RPM generation handles /lib64
 WCHAN skips leading '.'
 vmstat: numerous new features
